# visitcard

./: .gitignore  manage.py  pyproject.toml
main/: admin.py  models.py  views.py
main/migrations/: 0001_initial.py  0002_post_is_published.py
templates/: base.html  index.html
visitcard/: asgi.py  settings.py  urls.py  wsgi.py
