[project]
name = "visitcard"
version = "0.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)",
    "django-ckeditor (>=6.7.3,<7.0.0)",
    "easy-thumbnails (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
